--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -67,5 +67,5 @@ html
     script(src="/js/crearAgendas.js")
     script(src="/js/autocompletar_profesional_agenda.js")
     script.
-      // Inicializar autocompletado
+      //inicializamos autocompletado
       const autocompletarProfesional = new AutocompletarProfesionalAgenda('profesional-search', 'profesional-id');
