--- a/views/secretaria/secretariaCrearListaEspera.pug
+++ b/views/secretaria/secretariaCrearListaEspera.pug
@@ -32,6 +32,6 @@ html
     script(src="/js/autocompletar_paciente.js")
     script(src="/js/autocompletar_profesional.js")
     script.
-      // Inicializar autocompletados
+      //inicializamos autocompletados
       const autocompletarPaciente = new AutocompletarPaciente('paciente-search', 'paciente-id');
       const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
