--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -78,6 +78,6 @@ html
         }
       });
       
-      // Inicializar autocompletados
+      //inicializamos autocompletados
       const autocompletarPaciente = new AutocompletarPaciente('paciente-search', 'paciente-id');
       const autocompletarProfesional = new AutocompletarProfesional('profesional-search', 'profesional-id');
