--- a/views/login.pug
+++ b/views/login.pug
@@ -13,19 +13,15 @@ html(lang="es")
           img.imgLogin(src="/img/login.jpg" alt="")
           .img-text
             h2 “Simplemente todas las herramientas que mi equipo y yo necesitamos.”
-
         .right-side
           a(href="http://localhost:3000/" rel="noopener noreferrer")
             img(src="/img/agenda.png" alt="" class="logoHeader")
-
           .form-box
-
-            // ---- TABS ----
+            //tabs
             .tabs
               button.tab-btn.active(data-target="loginForm") Iniciar Sesión
               button.tab-btn(data-target="registerForm") Registrarse
-
-            // ---- LOGIN ----
+            //login
             form.formLogin(id="loginForm")
               h1 Bienvenido
               p.subtitle Iniciá sesión para continuar
@@ -58,9 +54,7 @@ html(lang="es")
                     | La fecha de nacimiento no es válida (edad máxima: 100 años)
                   else if query.error == 'nouser'
                     | Datos del usuario no encontrados.
-                  
-
-            // ---- REGISTER ----
+            //register
             form.formRegister.hidden(id="registerForm" class="register-grid" action="/auth/register" method="POST")
               h1 Crear Cuenta
 
